--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.3.2",
     "@types/node": "^14.0.9",
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
@@ -62,5 +63,8 @@
         "diagnostics": false
       }
     }
+  },
+  "dependencies": {
+    "firebase": "^7.14.6"
   }
 }
