--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "build:es5:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch": "run-p build:es5:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
+    "size:check": "run-p size:check:es5",
+    "size:check:es5": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"ES5: \",$1,\"kB\";}'",
     "test": "jest",
     "test:watch": "jest --watch"
   },
