--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "types": "dist/index.d.ts",
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.2",
+    "@types/jest": "^25.2.3",
     "@types/node": "^14.0.9",
+    "@types/sinon": "^9.0.4",
+    "jest": "^26.0.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
     "prettier-check": "2.0.0",
@@ -29,10 +32,11 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "5.3.0",
     "rollup-plugin-typescript2": "0.27.1",
+    "ts-jest": "^26.1.0",
     "tslint": "6.1.2",
     "tslint-config-prettier": "1.18.0",
     "tslint-consistent-codestyle": "1.16.0",
-    "typescript": "3.4.3"
+    "typescript": "3.9.5"
   },
   "scripts": {
     "build": "run-p build:es5 build:bundle",
@@ -53,6 +57,7 @@
       "^.+\\.ts$": "ts-jest"
     },
     "moduleFileExtensions": [
+      "js",
       "ts"
     ],
     "testEnvironment": "node",
