feat: att lint stage

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "build:es5:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch": "run-p build:es5:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
+    "lint": "eslint . --ext .js,.ts",
     "size:check": "run-p size:check:es5",
     "size:check:es5": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"ES5: \",$1,\"kB\";}'",
     "test": "jest",
