--- a/package.json
+++ b/package.json
@@ -39,16 +39,14 @@
     "rollup-plugin-terser": "5.3.0",
     "rollup-plugin-typescript2": "0.27.1",
     "ts-jest": "^26.1.0",
-    "tsc-watch": "^4.2.8",
-    "tscpaths": "^0.0.9",
     "typescript": "3.9.5"
   },
   "scripts": {
     "build": "run-p build:es5 build:bundle",
     "build:bundle": "rollup --config",
     "build:bundle:watch": "rollup --config --watch",
-    "build:es5": "tsc -p tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./dist",
-    "build:es5:watch": "tsc-watch -p tsconfig.build.json --onSuccess \"tscpaths -p tsconfig.build.json -s ./src -o ./dist\"",
+    "build:es5": "tsc -p tsconfig.build.json",
+    "build:es5:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch": "run-p build:es5:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
     "lint": "eslint . --ext .js,.ts",
