--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "arena-chat-sdk",
-  "version": "0.0.2",
-  "description": "arena-chat-sdk is the official JavaScript client for Arena Chat, a service for building chat applications.",
-  "author": "Cesar William Alvarenga",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stationfy/arena-chat-sdk.git"
+  "private": true,
+  "scripts": {
+    "build": "lerna run --stream --concurrency 1 --sort build",
+    "build:es5": "lerna run --stream --concurrency 1 --sort build:es5",
+    "build:esm": "lerna run --stream --concurrency 1 --sort build:esm",
+    "build:watch": "lerna run build:watch --stream --no-sort --concurrency 9999",
+    "clean": "lerna run --stream clean && lerna clean --yes",
+    "fix": "lerna run --stream --concurrency 1 fix",
+    "link:yarn": "lerna run --stream --concurrency 1 link:yarn",
+    "lint": "lerna run --stream --concurrency 1 lint",
+    "lint:json": "lerna run --stream --concurrency 1 lint:tslint:json",
+    "publish:all": "lerna publish",
+    "test": "lerna run --stream --concurrency 1 --sort test"
   },
-  "bugs": {
-    "url": "https://github.com/stationfy/arena-chat-sdk/issues"
+  "volta": {
+    "node": "10.15.3",
+    "yarn": "1.13.0"
   },
-  "homepage": "https://github.com/stationfy/arena-chat-sdk#readme",
-  "engines": {
-    "node": ">=6"
-  },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "workspaces": [
+    "packages/sdk",
+    "packages/types"
+  ],
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.2",
     "@types/jest": "^25.2.3",
@@ -39,30 +43,12 @@
     "rollup-plugin-terser": "5.3.0",
     "rollup-plugin-typescript2": "0.27.1",
     "ts-jest": "^26.1.0",
-    "typescript": "3.9.5"
+    "typescript": "3.9.5",
+    "tslib": "^2.0.0",
+    "lerna": "3.13.4"
   },
-  "scripts": {
-    "build": "run-p copy-config:prod build:dist build:bundle",
-    "build:bundle": "rollup --config",
-    "build:bundle:watch": "rollup --config --watch",
-    "build:dev": "run-p copy-config:dev build:dist build:bundle",
-    "build:dist": "tsc -p tsconfig.build.json",
-    "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
-    "build:watch": "run-p copy-config:dev build:dist:watch build:bundle:watch",
-    "clean": "rimraf dist coverage build",
-    "copy-config:dev": "cp config.dev.ts ./src/config.ts",
-    "copy-config:prod": "cp config.prod.ts ./src/config.ts",
-    "lint": "eslint . --ext .js,.ts",
-    "pre-commit": "yarn lint-staged",
-    "prepare": "run-s build",
-    "pretest": "run-s copy-config:dev",
-    "size:check": "run-p size:check:bundle",
-    "size:check:bundle": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
-    "test": "jest",
-    "test:jest:watch": "jest --watch",
-    "test:watch": "run-s copy-config:dev test:jest:watch"
+  "resolutions": {
+    "**/agent-base": "5"
   },
-  "dependencies": {
-    "firebase": "^7.14.6"
-  }
+  "version": "0.0.0"
 }
