--- a/packages/sdk/example/package.json
+++ b/packages/sdk/example/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "arena-chat-sdk": "link:..",
+    "@arena-im/chat-sdk": "link:..",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
