--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@arena-im/chat-sdk",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "arena-chat-sdk is the official JavaScript client for Arena Chat, a service for building chat applications.",
-  "author": "Cesar William Alvarenga",
+  "author": "Arena",
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "0.0.1",
+    "@arena-im/chat-types": "0.0.2",
     "firebase": "^7.14.6"
   },
   "devDependencies": {
@@ -56,10 +56,12 @@
     "clean": "rimraf dist coverage build",
     "copy-config:dev": "cp config.dev.ts ./src/config.ts",
     "copy-config:prod": "cp config.prod.ts ./src/config.ts",
+    "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
     "pre-commit": "yarn lint-staged",
     "pretest": "run-s copy-config:dev",
     "size:check": "run-p size:check:bundle",
+    "publish:registry": "yarn publish --access public",
     "size:check:bundle": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
     "test": "jest",
     "test:jest:watch": "jest --watch",
