--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -66,5 +66,6 @@
     "test": "jest",
     "test:jest:watch": "jest --watch",
     "test:watch": "run-s copy-config:dev test:jest:watch"
-  }
+  },
+  "gitHead": "769b1a9a457e24ac16f0a90ea827b55a1a86f07b"
 }
