add install step

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,9 +19,11 @@ jobs:
       with:
         path: node_modules
         key: ${{ matrix.node-version }}-${{ runner.OS }}-build-${{ hashFiles('package.json') }}
-    - name: Build
+    - name: Install
       if: steps.cache-modules.outputs.cache-hit != 'true'
       run: yarn install
+    - name: Build
+      run: yarn build
     - name: Link
       run: yarn link:yarn
     - name: Test
@@ -39,9 +41,11 @@ jobs:
       with:
         path: node_modules
         key: 12.x-${{ runner.OS }}-build-${{ hashFiles('package.json') }}
-    - name: Build
+    - name: Install
       if: steps.cache-modules.outputs.cache-hit != 'true'
       run: yarn install
+    - name: Build
+      run: yarn build
     - name: Link
       run: yarn link:yarn
     - name: Test
