--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -50,10 +50,11 @@ jobs:
       run: yarn link:yarn
     - name: Test
       run: yarn test
-
-    - name: Publish
-      run: |
-          yarn lerna publish from-package --yes
+    - name: Publish new version to NPM
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.x
+        registry-url: 'https://registry.npmjs.org'
+    - run: yarn publish:all
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
