--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -57,4 +57,5 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: yarn publish:all
       env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
