--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -55,9 +55,7 @@ jobs:
       with:
         node-version: 14.x
         registry-url: 'https://registry.npmjs.org'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
     - run: yarn publish:all
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
