--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,7 +32,7 @@ jobs:
     name: Publish
     needs: test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
         uses: actions/checkout@v2 
@@ -54,11 +54,14 @@ jobs:
         run: yarn install
       - name: Build
         run: yarn build
+      - name: Test
+        run: yarn test
       - name: Setup Node ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
-      - run: yarn publish:all
+      - name: Publish
+        run: yarn publish:all
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
