--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "yarn": "1.13.0"
   },
   "workspaces": [
-    "packages/sdk",
-    "packages/types"
+    "packages/*"
   ],
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.2",
