--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -6,7 +6,8 @@
       "@utils/*": ["./src/utils/*"],
       "@channel/*": ["./src/channel/*"],
       "@models/*": ["./src/models/*"]
-    }
+    },
+    "module": "ESNext"
   },
   "include": ["src/**/*", "test/**/*"]
 }
