--- a/packages/sdk/tsconfig.build.json
+++ b/packages/sdk/tsconfig.build.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist",
-    "module": "ESNext"
+    "outDir": "dist"
   },
   "exclude": ["dist", "build"],
   "include": ["src/**/*"]
