--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -6,7 +6,8 @@
       "@utils/*": ["./src/utils/*"],
       "@channel/*": ["./src/channel/*"],
       "@qna/*": ["./src/qna/*"],
-      "@models/*": ["./src/models/*"]
+      "@models/*": ["./src/models/*"],
+      "@polls/*": ["./src/polls/*"]
     }
   },
   "include": ["src/**/*", "test/**/*"]
