--- a/packages/sdk/examples/react/package.json
+++ b/packages/sdk/examples/react/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@arena-im/chat-sdk": "link:../..",
+    "@arena-im/chat-types": "link:../../../types",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
