--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -43,7 +43,7 @@
     "rollup": "2.10.5",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-terser": "5.3.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.27.1",
     "ts-jest": "^26.1.0",
     "typescript": "3.9.5"
