--- a/packages/sdk/examples/react/package.json
+++ b/packages/sdk/examples/react/package.json
@@ -13,8 +13,8 @@
     "@arena-im/chat-sdk": "link:../..",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "react-scripts": "^4.0.0",
+    "typescript": "~4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
