--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "build:dev": "lerna run --stream --concurrency 1 --sort build:dev",
     "build": "lerna run --stream --concurrency 1 --sort build",
     "build:es5": "lerna run --stream --concurrency 1 --sort build:es5",
     "build:esm": "lerna run --stream --concurrency 1 --sort build:esm",
@@ -11,6 +12,7 @@
     "lint": "lerna run --stream --concurrency 1 lint",
     "lint:json": "lerna run --stream --concurrency 1 lint:tslint:json",
     "publish:all": "lerna publish",
+    "publish:beta": "lerna publish --canary --preid beta --dist-tag beta",
     "test": "lerna run --stream --concurrency 1 --sort test"
   },
   "volta": {
