--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -53,7 +53,7 @@ jobs:
     name: Publish Beta
     needs: test
     runs-on: ubunut-latest
-    if: github.event_name == 'push' && github.ref != 'refs/heads/master'
+    if: "github.event_name == 'push' && github.ref != 'refs/heads/master'"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
