--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -52,8 +52,8 @@ jobs:
   publish-beta:
     name: Publish Beta
     needs: test
-    runs-on: ubunut-latest
-    if: "github.event_name == 'push' && github.ref != 'refs/heads/master'"
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref != 'refs/heads/master'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
