--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -52,7 +52,7 @@
     "build": "run-s copy-config:prod build:dist build:bundle",
     "build:bundle": "rollup --config",
     "build:bundle:watch": "rollup --config --watch",
-    "build:dev": "run-p copy-config:dev build:dist build:bundle",
+    "build:dev": "run-s copy-config:dev build:dist build:bundle",
     "build:dist": "tsc -p tsconfig.build.json",
     "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch": "run-p copy-config:dev build:dist:watch build:bundle:watch",
