--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arena-im/chat-types",
   "version": "2.0.9",
-  "description": "Types for Arena Chat SDK",
+  "description": "Types for Arena Chat SDK client",
   "author": "Arena",
   "license": "BSD-3-Clause",
   "engines": {
