--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arena-im/chat-sdk",
   "version": "2.1.0",
-  "description": "arena-chat-sdk is the official JavaScript SDK for Arena Chat, a service for building chat applications.",
+  "description": "arena-chat-sdk is the official JavaScript SDK for Arena Chat, a service for building chat applications",
   "author": "Arena",
   "license": "ISC",
   "repository": {
