--- a/packages/sdk/examples/react/package.json
+++ b/packages/sdk/examples/react/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "^4.0.0",
     "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7",
-    "typescript": "~4.0.5"
+    "typescript": "~4.0.5",
+    "uuidv4": "^6.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
