--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -37,16 +37,17 @@
     "jest": "^26.0.1",
     "lint-staged": "^10.2.9",
     "npm-run-all": "4.1.5",
-    "prettier": "^2.0.5",
+    "prettier": "^2.3.0",
     "prettier-check": "2.0.0",
     "rimraf": "3.0.2",
-    "rollup": "2.10.5",
+    "rollup": "2.48.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "0.27.1",
+    "rollup-plugin-typescript2": "0.30.0",
     "ts-jest": "^26.1.0",
-    "typescript": "3.9.5"
+    "tslib": "^2.2.0",
+    "typescript": "4.2.4"
   },
   "scripts": {
     "build": "run-s copy-config:prod build:dist build:bundle",
