--- a/packages/chat-sdk/package.json
+++ b/packages/chat-sdk/package.json
@@ -19,17 +19,17 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@arena-im/chat-types": "^2.0.30",
-    "firebase": "^7.24.0",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0"
+    "@arena-im/core": "^2.0.30"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.3",
     "@types/sinon": "^10.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
@@ -39,14 +39,11 @@
     "prettier": "^2.3.1",
     "prettier-check": "2.0.0",
     "rimraf": "3.0.2",
-    "rollup": "2.52.1",
-    "rollup-plugin-commonjs": "10.1.0",
+    "rollup": "2.52.3",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
     "ts-jest": "^27.0.3",
-    "tslib": "^2.3.0",
     "typescript": "4.3.4"
   },
   "scripts": {
@@ -58,8 +55,8 @@
     "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch": "run-p copy-config:dev build:dist:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
-    "copy-config:dev": "cp config.dev.ts ./src/config.ts",
-    "copy-config:prod": "cp config.prod.ts ./src/config.ts",
+    "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
+    "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
     "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
     "pre-commit": "yarn lint-staged",
