--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,5 +16,54 @@
         "node": ">=6"
     },
     "main": "dist/index.js",
-    "types": "dist/index.d.ts"
+    "types": "dist/index.d.ts",
+    "dependencies": {
+        "@arena-im/chat-types": "^2.0.30",
+        "firebase": "^8.6.8",
+        "graphql": "^15.5.0",
+        "graphql-request": "^3.4.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^26.0.23",
+        "@types/node": "^15.12.3",
+        "@types/sinon": "^10.0.2",
+        "@typescript-eslint/eslint-plugin": "^4.28.0",
+        "@typescript-eslint/parser": "^4.28.0",
+        "eslint": "^7.28.0",
+        "eslint-config-prettier": "^6.11.0",
+        "husky": "^4.2.5",
+        "jest": "^27.0.5",
+        "lint-staged": "^11.0.0",
+        "npm-run-all": "4.1.5",
+        "prettier": "^2.3.1",
+        "prettier-check": "2.0.0",
+        "rimraf": "3.0.2",
+        "ts-jest": "^27.0.3",
+        "typescript": "4.3.4"
+    },
+    "scripts": {
+        "build": "run-s copy-config:prod build:es5 build:esm",
+        "build:dev": "run-s copy-config:dev build:es5 build:esm",
+        "build:es5": "tsc -p tsconfig.build.json",
+        "build:esm": "tsc -p tsconfig.esm.json",
+        "build:watch": "run-s copy-config:dev build:watch:es5 build:watch:esm",
+        "build:watch:es5": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
+        "build:watch:esm": "tsc -p tsconfig.esm.json -w --preserveWatchOutput",
+        "clean": "rimraf dist esm",
+        "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
+        "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
+        "link:yarn": "yarn link",
+        "lint": "run-s lint:prettier lint:tslint",
+        "lint:prettier": "prettier-check \"{src,test}/**/*.ts\"",
+        "lint:tslint": "tslint -t stylish -p .",
+        "lint:tslint:json": "tslint --format json -p . | tee lint-results.json",
+        "fix": "run-s fix:tslint fix:prettier",
+        "fix:prettier": "prettier --write \"{src,test}/**/*.ts\"",
+        "fix:tslint": "tslint --fix -t stylish -p .",
+        "prepare": "run-s build",
+        "publish:registry": "yarn publish --access public",
+        "test": "jest",
+        "test:jest:watch": "jest --watch",
+        "test:watch": "run-s copy-config:dev test:jest:watch"
+    }
 }
