--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -18,17 +18,17 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "^2.0.30",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0"
+    "@arena-im/chat-types": "^2.0.30"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.3",
     "@types/sinon": "^10.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
@@ -39,13 +39,10 @@
     "prettier-check": "2.0.0",
     "rimraf": "3.0.2",
     "rollup": "2.52.1",
-    "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
     "ts-jest": "^27.0.3",
-    "tslib": "^2.2.0",
     "typescript": "4.3.4"
   },
   "scripts": {
