--- a/packages/chat-sdk/examples/react/package.json
+++ b/packages/chat-sdk/examples/react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@arena-im/core": "link:../../../core",
     "@arena-im/chat-sdk": "link:../..",
     "@arena-im/chat-types": "link:../../../types",
     "@testing-library/jest-dom": "^4.2.4",
