feat: add websocket transport and presence api

--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -54,8 +54,8 @@
     "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch": "run-p copy-config:dev build:dist:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
-    "copy-config:dev": "cp config.dev.ts ./src/config.ts",
-    "copy-config:prod": "cp config.prod.ts ./src/config.ts",
+    "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
+    "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
     "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
     "pre-commit": "yarn lint-staged",
