--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,7 +21,8 @@
         "@arena-im/chat-types": "^2.0.30",
         "firebase": "^9.0.0-beta.5",
         "graphql": "^15.5.0",
-        "graphql-request": "^3.4.0"
+        "graphql-request": "^3.4.0",
+        "socket.io-client": "^4.1.2"
     },
     "devDependencies": {
         "@types/jest": "^26.0.23",
