feat: add organization in core project

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@arena-im/core",
-    "version": "2.2.0-beta.1",
+    "version": "2.2.0-beta.4",
     "description": "Base implementation for all Arena JavaScript SDKs",
     "author": "Arena",
     "license": "ISC",
@@ -18,7 +18,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "dependencies": {
-        "@arena-im/chat-types": "2.2.0-beta.1",
+        "@arena-im/chat-types": "2.2.0-beta.4",
         "firebase": "^9.0.0-beta.5",
         "graphql": "^15.5.0",
         "graphql-request": "^3.4.0",
@@ -55,13 +55,8 @@
         "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
         "link:yarn": "yarn link",
         "lint": "run-s lint:prettier lint:tslint",
-        "lint:prettier": "prettier-check \"{src,test}/**/*.ts\"",
-        "lint:tslint": "tslint -t stylish -p .",
-        "lint:tslint:json": "tslint --format json -p . | tee lint-results.json",
-        "fix": "run-s fix:tslint fix:prettier",
-        "fix:prettier": "prettier --write \"{src,test}/**/*.ts\"",
-        "fix:tslint": "tslint --fix -t stylish -p .",
-        "prepare": "run-s build",
+        "pre-commit": "yarn lint-staged",
+        "pretest": "run-s copy-config:dev",
         "publish:registry": "yarn publish --access public",
         "size:check": "run-p size:check:bundle",
         "size:check:bundle": "cat dist/*.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
