--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -63,10 +63,7 @@
     "pretest": "run-s copy-config:dev",
     "publish:registry": "yarn publish --access public",
     "size:check": "run-p size:check:bundle",
-    "size:check:bundle": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
-    "test": "jest",
-    "test:jest:watch": "jest --watch",
-    "test:watch": "run-s copy-config:dev test:jest:watch"
+    "size:check:bundle": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'"
   },
   "gitHead": "769b1a9a457e24ac16f0a90ea827b55a1a86f07b"
 }
