--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "3.22.1",
-  "version": "2.2.0-beta.6",
+  "version": "2.0.30",
   "packages": "packages/*",
   "npmClient": "yarn",
   "useWorkspaces": true,
