#3717c7: change eslint configs

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,7 +54,7 @@
         "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
         "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
         "link:yarn": "yarn link",
-        "lint": "run-s lint:prettier lint:tslint",
+        "lint": "eslint . --ext .js,.ts",
         "pre-commit": "yarn lint-staged",
         "pretest": "run-s copy-config:dev",
         "publish:registry": "yarn publish --access public",
