--- a/packages/chat-sdk/package.json
+++ b/packages/chat-sdk/package.json
@@ -30,13 +30,14 @@
     "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^7.13.0",
     "husky": "^4.2.5",
     "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
     "npm-run-all": "4.1.5",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "prettier-check": "2.0.0",
     "rimraf": "3.0.2",
     "rollup": "2.52.3",
