--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -32,7 +32,7 @@
     "build:watch:esm": "tsc -p tsconfig.esm.json -w --preserveWatchOutput",
     "clean": "rimraf dist esm",
     "link:yarn": "yarn link",
-    "lint": "run-s lint:prettier lint:tslint",
+    "lint": "run-s lint:prettier",
     "lint:prettier": "prettier-check \"{src,test}/**/*.ts\"",
     "lint:tslint": "tslint -t stylish -p .",
     "lint:tslint:json": "tslint --format json -p . | tee lint-results.json",
