--- a/packages/chat-sdk/package.json
+++ b/packages/chat-sdk/package.json
@@ -18,8 +18,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "2.2.2-beta.8",
-    "@arena-im/core": "2.2.2-beta.8"
+    "@arena-im/chat-types": "^2.2.2",
+    "@arena-im/core": "^2.2.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
