--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arena-im/liveblog-sdk",
-  "version": "2.4.6",
+  "version": "2.5.1-beta.0",
   "description": "arena-liveblog-sdk is the official JavaScript client for Arena Liveblog, a service for building liveblog applications.",
   "author": "Arena",
   "license": "ISC",
@@ -18,8 +18,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "^2.4.6",
-    "@arena-im/core": "^2.4.6"
+    "@arena-im/chat-types": "2.5.1-beta.0",
+    "@arena-im/core": "2.5.1-beta.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
