fix: validate poll array

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "publish:beta": "lerna publish --ignore-prepublish --ignore-scripts --canary --preid beta --dist-tag beta",
     "publish:dev": "run-s build:dev publish:beta",
     "size:check": "lerna run --stream --concurrency 1 size:check",
-    "test": "lerna run --stream --concurrency 1 --sort test"
+    "test": "lerna run --stream --concurrency 1 --sort test",
+    "prepare": "husky install"
   },
   "volta": {
     "node": "10.15.3",
