--- a/packages/chat-sdk/package.json
+++ b/packages/chat-sdk/package.json
@@ -33,12 +33,12 @@
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^7.13.0",
-    "husky": "^4.2.5",
     "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "^2.3.2",
     "prettier-check": "2.0.0",
+    "process": "^0.11.10",
     "rimraf": "3.0.2",
     "rollup": "2.52.3",
     "rollup-plugin-json": "^4.0.0",
