--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,12 +32,12 @@
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.5",
     "jest": "^27.0.5",
     "lint-staged": "^11.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "^2.3.1",
     "prettier-check": "2.0.0",
+    "process": "^0.11.10",
     "rimraf": "3.0.2",
     "ts-jest": "^27.0.3",
     "typescript": "4.3.4"
