--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -32,12 +32,12 @@
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^6.0.0",
     "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "^2.3.1",
     "prettier-check": "2.0.0",
+    "process": "^0.11.10",
     "rimraf": "3.0.2",
     "rollup": "2.52.1",
     "rollup-plugin-json": "^4.0.0",
