--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -19,6 +19,7 @@
     "npm-run-all": "^4.1.2",
     "prettier": "^1.17.0",
     "prettier-check": "^2.0.0",
+    "process": "^0.11.10",
     "rimraf": "3.0.2",
     "typescript": "^4.2.4"
   },
