--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "es5",
-    "strictBindCallApply": false
+    "strictBindCallApply": false,
+    "experimentalDecorators": true
   },
   "include": ["src/**/*", "test/**/*"]
 }
