--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "lerna run --stream --concurrency 1 --sort build",
     "build:dev": "lerna run --stream --concurrency 1 --sort build:dev",
+    "build:stg": "lerna run --stream --concurrency 1 --sort build:stg",
     "build:es5": "lerna run --stream --concurrency 1 --sort build:es5",
     "build:esm": "lerna run --stream --concurrency 1 --sort build:esm",
     "build:watch": "lerna run build:watch --stream --no-sort --concurrency 9999",
@@ -14,6 +15,7 @@
     "publish:all": "lerna publish",
     "publish:beta": "lerna publish --ignore-prepublish --ignore-scripts --canary --preid beta --dist-tag beta",
     "publish:dev": "run-s build:dev publish:beta",
+    "publish:stg": "run-s build:stg",
     "size:check": "lerna run --stream --concurrency 1 size:check",
     "test": "lerna run --stream --concurrency 1 --sort test",
     "prepare": "husky install"
