--- a/packages/chat-sdk/package.json
+++ b/packages/chat-sdk/package.json
@@ -54,9 +54,11 @@
     "build:dev": "run-s copy-config:dev build:dist build:bundle",
     "build:dist": "tsc -p tsconfig.build.json",
     "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
+    "build:stg": "run-s copy-config:stg build:dist build:bundle",
     "build:watch": "run-p copy-config:dev build:dist:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
     "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
+    "copy-config:stg": "cp ../../config.stg.ts ./src/config.ts",
     "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
     "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
