fix: updated build scripts

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
   "scripts": {
     "build": "run-s copy-config:prod build:es5 build:esm",
     "build:dev": "run-s copy-config:dev build:es5 build:esm",
+    "build:stg": "run-s copy-config:stg build:es5 build:esm",
     "build:es5": "tsc -p tsconfig.build.json",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:watch": "run-s copy-config:dev build:watch:es5 build:watch:esm",
@@ -52,6 +53,7 @@
     "build:watch:esm": "tsc -p tsconfig.esm.json -w --preserveWatchOutput",
     "clean": "rimraf dist esm",
     "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
+    "copy-config:stg": "cp ../../config.stg.ts ./src/config.ts",
     "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
     "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
