--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -50,12 +50,14 @@
     "build": "run-s copy-config:prod build:dist build:bundle",
     "build:bundle": "rollup --config",
     "build:bundle:watch": "rollup --config --watch",
+    "build:prd-eu": "run-s copy-config:prd-eu build:dist build:bundle",
     "build:dev": "run-s copy-config:dev build:dist build:bundle",
     "build:stg": "run-s copy-config:stg build:dist build:bundle",
     "build:dist": "tsc -p tsconfig.build.json",
     "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch": "run-p copy-config:dev build:dist:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
+    "copy-config:prd-eu": "cp ../../config.prd-eu.ts ./src/config.ts",
     "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
     "copy-config:stg": "cp ../../config.stg.ts ./src/config.ts",
     "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
