--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "link:yarn": "lerna run --stream --concurrency 1 link:yarn",
     "lint": "lerna run --stream --concurrency 1 lint",
     "lint:json": "lerna run --stream --concurrency 1 lint:tslint:json",
-    "publish:all": "lerna publish",
-    "publish:all-eu": "lerna publish --preid prd-eu --dist-tag prd-eu",
+    "publish:all:build": "lerna publish",
+    "publish:all:build:eu": "lerna publish --preid prd-eu --dist-tag prd-eu",
     "publish:beta": "lerna publish --ignore-prepublish --ignore-scripts --canary --preid beta --dist-tag beta",
     "publish:dev": "run-s build:dev publish:beta",
     "publish:stg": "run-s build:stg",
