chore: change versions to 2.6.0-beta.1 and comment update-config script

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -46,8 +46,8 @@ jobs:
         run: yarn publish:all:build
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      - name: Setup Prd EU
-        run: node update-version.js
+      # - name: Setup Prd EU
+      #   run: node update-version.js
       - name: Build EU
         run: yarn build:eu
       - name: Publish Prd EU
