--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arena-im/core",
-  "version": "2.5.32",
+  "version": "2.5.32-prd-eu-prd-eu",
   "description": "Base implementation for all Arena JavaScript SDKs",
   "author": "Arena",
   "license": "ISC",
@@ -18,7 +18,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "^2.5.32",
+    "@arena-im/chat-types": "2.5.32-prd-eu-prd-eu",
     "firebase": "9.0.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
@@ -68,5 +68,5 @@
     "test:jest:watch": "jest --watch",
     "test:watch": "run-s copy-config:dev test:jest:watch"
   },
-  "gitHead": "bb0e57d8150cd4f139e43865110d7ab60609e371"
+  "gitHead": "d48616fa4ca29d0f8f5b5084ea8523c0929feca2"
 }
