--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arena-im/liveblog-sdk",
-  "version": "2.5.32",
+  "version": "2.5.32-prd-eu-prd-eu",
   "description": "arena-liveblog-sdk is the official JavaScript client for Arena Liveblog, a service for building liveblog applications.",
   "author": "Arena",
   "license": "ISC",
@@ -18,8 +18,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "^2.5.32",
-    "@arena-im/core": "^2.5.32"
+    "@arena-im/chat-types": "2.5.32-prd-eu-prd-eu",
+    "@arena-im/core": "2.5.32-prd-eu-prd-eu"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
@@ -72,5 +72,5 @@
     "test:jest:watch": "jest --watch",
     "test:watch": "run-s copy-config:dev test:jest:watch"
   },
-  "gitHead": "bb0e57d8150cd4f139e43865110d7ab60609e371"
+  "gitHead": "d48616fa4ca29d0f8f5b5084ea8523c0929feca2"
 }
