--- a/packages/chat-sdk/package.json
+++ b/packages/chat-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arena-im/chat-sdk",
-  "version": "2.5.32-prd-eu-prd-eu",
+  "version": "2.5.33",
   "description": "arena-chat-sdk is the official JavaScript client for Arena Chat, a service for building chat applications.",
   "author": "Arena",
   "license": "ISC",
@@ -18,8 +18,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "2.5.32-prd-eu-prd-eu",
-    "@arena-im/core": "2.5.32-prd-eu-prd-eu"
+    "@arena-im/chat-types": "^2.5.33",
+    "@arena-im/core": "^2.5.33"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
