--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arena-im/liveblog-sdk",
-  "version": "2.5.32-prd-eu-prd-eu",
+  "version": "2.5.33",
   "description": "arena-liveblog-sdk is the official JavaScript client for Arena Liveblog, a service for building liveblog applications.",
   "author": "Arena",
   "license": "ISC",
@@ -18,8 +18,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "2.5.32-prd-eu-prd-eu",
-    "@arena-im/core": "2.5.32-prd-eu-prd-eu"
+    "@arena-im/chat-types": "^2.5.33",
+    "@arena-im/core": "^2.5.33"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
