--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "3.22.1",
-  "version": "2.6.0-beta.2",
+  "version": "2.5.23",
   "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
