--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,29 +43,21 @@
     "typescript": "4.3.4"
   },
   "scripts": {
-    "build": "run-s copy-config:prod build:es5 build:esm",
-    "build:eu": "run-s copy-config:prod-eu build:es5 build:esm",
-    "build:dev": "run-s copy-config:dev build:es5 build:esm",
-    "build:stg": "run-s copy-config:stg build:es5 build:esm",
+    "build": "run-s build:es5 build:esm",
     "build:es5": "tsc -p tsconfig.build.json",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "build:watch": "run-s copy-config:dev build:watch:es5 build:watch:esm",
+    "build:watch": "run-s build:watch:es5 build:watch:esm",
     "build:watch:es5": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
     "build:watch:esm": "tsc -p tsconfig.esm.json -w --preserveWatchOutput",
     "clean": "rimraf dist esm",
-    "copy-config:dev": "cp ../../config.dev.ts ./src/config.ts",
-    "copy-config:stg": "cp ../../config.stg.ts ./src/config.ts",
-    "copy-config:prod": "cp ../../config.prod.ts ./src/config.ts",
-    "copy-config:prod-eu": "cp ../../config.prod-eu.ts ./src/config.ts",
     "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
     "pre-commit": "yarn lint-staged",
-    "pretest": "run-s copy-config:dev",
     "publish:registry": "yarn publish --access public",
     "size:check": "run-p size:check:bundle",
     "size:check:bundle": "cat dist/*.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
     "test": "jest --forceExit",
     "test:jest:watch": "jest --watch",
-    "test:watch": "run-s copy-config:dev test:jest:watch"
+    "test:watch": "run-s test:jest:watch"
   }
 }
