--- a/packages/config-sdk/package.json
+++ b/packages/config-sdk/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "@arena-im/liveblog-sdk",
-  "version": "2.5.23",
-  "description": "arena-liveblog-sdk is the official JavaScript client for Arena Liveblog, a service for building liveblog applications.",
+  "name": "@arena-im/config-sdk",
+  "version": "1.0.0",
+  "description": "Arena config-sdk is the official JavaScript config for Arena Chat, a service for building chat applications.",
   "author": "Arena",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stationfy/arena-sdk.git"
+    "url": "git+https://github.com/stationfy/arena-config-sdk.git"
   },
   "bugs": {
-    "url": "https://github.com/stationfy/arena-sdk/issues"
+    "url": "https://github.com/stationfy/arena-config-sdk/issues"
   },
-  "homepage": "https://github.com/stationfy/arena-sdk#readme",
+  "homepage": "https://github.com/stationfy/arena-config-sdk#readme",
   "engines": {
     "node": ">=18"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "^2.5.23",
-    "@arena-im/core": "^2.5.23",
-    "@arena-im/config-sdk": "1.0.0"
+    
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
@@ -31,16 +29,17 @@
     "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^7.13.0",
     "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
     "npm-run-all": "4.1.5",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "prettier-check": "2.0.0",
     "process": "^0.11.10",
     "rimraf": "3.0.2",
-    "rollup": "2.52.1",
+    "rollup": "2.52.3",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
@@ -53,7 +52,7 @@
     "build:bundle:watch": "rollup --config --watch",
     "build:dist": "tsc -p tsconfig.build.json",
     "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
-    "build:watch": "run-p  build:dist:watch build:bundle:watch",
+    "build:watch": "run-p build:dist:watch build:bundle:watch",
     "clean": "rimraf dist coverage build",
     "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
@@ -61,9 +60,9 @@
     "publish:registry": "yarn publish --access public",
     "size:check": "run-p size:check:bundle",
     "size:check:bundle": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
-    "test": "jest --forceExit",
-    "test:jest:watch": "jest --watch",
-    "test:watch": "run-s test:jest:watch"
+    "test": "jest --forceExit --passWithNoTests",
+    "test:jest:watch": "jest --watch --passWithNoTests",
+    "test:watch": "run-s test:jest:watch --passWithNoTests"
   },
   "gitHead": "769b1a9a457e24ac16f0a90ea827b55a1a86f07b"
 }
