--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,6 +19,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@arena-im/chat-types": "^2.6.0-beta.2",
+    "@arena-im/config-sdk": "1.0.0",
     "firebase": "9.0.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
