feat: move config to other package

--- a/packages/config-sdk/package.json
+++ b/packages/config-sdk/package.json
@@ -47,19 +47,19 @@
     "typescript": "4.3.4"
   },
   "scripts": {
-    "build": "run-s build:dist build:bundle",
-    "build:bundle": "rollup --config",
-    "build:bundle:watch": "rollup --config --watch",
-    "build:dist": "tsc -p tsconfig.build.json",
-    "build:dist:watch": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
-    "build:watch": "run-p build:dist:watch build:bundle:watch",
-    "clean": "rimraf dist coverage build",
+    "build": "run-s build:es5 build:esm",
+    "build:es5": "tsc -p tsconfig.build.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:watch": "run-s build:watch:es5 build:watch:esm",
+    "build:watch:es5": "tsc -p tsconfig.build.json -w --preserveWatchOutput",
+    "build:watch:esm": "tsc -p tsconfig.esm.json -w --preserveWatchOutput",
+    "clean": "rimraf dist esm",
     "link:yarn": "yarn link",
     "lint": "eslint . --ext .js,.ts",
     "pre-commit": "yarn lint-staged",
     "publish:registry": "yarn publish --access public",
     "size:check": "run-p size:check:bundle",
-    "size:check:bundle": "cat build/bundle.min.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
+    "size:check:bundle": "cat dist/*.js | gzip -9 | wc -c | awk '{$1=$1/1024; print \"bundle: \",$1,\"kB\";}'",
     "test": "jest --forceExit --passWithNoTests",
     "test:jest:watch": "jest --watch --passWithNoTests",
     "test:watch": "run-s test:jest:watch --passWithNoTests"
